fix moz-vertical scroll. reflex elements only have overflow-x hidden now

--- a/src/templates/Challenges/classic/classic.css
+++ b/src/templates/Challenges/classic/classic.css
@@ -1,5 +1,5 @@
 .reflex-element {
-  overflow: hidden !important;
+  overflow-x: hidden;
 }
 
 .editor {
